# routectl

./: Cargo.toml  config.yaml
src/: config.rs  core.rs  generator.rs  ips.rs  main.rs  rules.rs  sources.rs  util.rs
src/resolvers/: mod.rs
src/resolving/: as.rs  lists.rs  mod.rs
